[package]
name = "ink"
version = "0.1.0"
authors = ["Who23 <40632266+Who23@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
sha2 = "0.9.2"
hex = "0.4"
lazy_static = "1.4.0"
custom_debug_derive = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
libflate = "1.0.3"
